--- a/config.yml
+++ b/config.yml
@@ -1,13 +1,12 @@
-language: "en"
+language: "en"  # Default language
 
 pipeline:
-  - name: "SpacyNLP"
-    model: "en_core_web_md"
-  - name: "SpacyTokenizer"
-  - name: "SpacyFeaturizer"
-  - name: "DIETClassifier"
-    epochs: 50  # ✅ reduced to lower memory
-  - name: "EntitySynonymMapper"
+- name: "SpacyNLP"
+  model: "en_core_web_md"  # Default English model
+- name: "SpacyTokenizer"
+- name: "SpacyFeaturizer"
+- name: "DIETClassifier"
+  epochs: 100
 
 assistant_id: 20250128-211148-caramel-charge
 
@@ -16,8 +15,8 @@ policies:
   - name: RulePolicy
   - name: UnexpecTEDIntentPolicy
     max_history: 5
-    epochs: 50  # ✅ reduced
+    epochs: 100
   - name: TEDPolicy
     max_history: 5
-    epochs: 50
+    epochs: 100
     constrain_similarities: true
