--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,15 @@ rasa-sdk==3.5.1
 spacy==3.5.3
 pydantic==1.10.0
 
+# Add these to avoid h5py/numpy binary compatibility errors
+numpy==1.21.0
+h5py==3.1.0
+
+# Rasa dependencies might need these too
+scikit-learn==1.0.2
+tensorflow==2.8.4
+
+
 
 
 
